--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 2.39em 2.5em 2.5em;
+  padding: 2.39em 2.5em 2em;
 }
 
 .top,
@@ -95,7 +95,7 @@ a {
   transform: scale(1.5);
   padding-left: 15px;
   padding-right: 15px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .fa-brands:hover {
@@ -106,6 +106,7 @@ a {
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin-bottom: 0;
 }
 .attribution a {
   color: hsl(300, 69%, 71%);
@@ -119,30 +120,67 @@ a {
     background-size: cover;
   }
 
-  .logos {
-    margin: 0 auto;
-    display: flex;
-    max-width: 1400px;
-    width: 88%;
-    padding-bottom: 90px;
+  h1 {
+    font-size: 2.5rem;
+    line-height: 60px;
+  }
+
+  p {
+    font-size: 1.125rem;
+    line-height: 27px;
+  }
+
+  .btn {
+    height: 56px;
+    margin-right: auto;
+    font-size: 1.125rem;
   }
 
   .container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    max-width: 1400px;
+    width: 1440px;
+    height: 800px;
+    padding: 4em 4.625em 2.5em 5em;
+    display: grid;
+    grid-template: repeat(3, auto) / 1fr 1fr;
+  }
+
+  .header {
+    grid-column: 1 / 2;
+  }
+
+  .left {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
   }
 
   .right {
-    width: 40%;
+    width: 487px;
+    margin-top: 40px;
+    text-align: left;
+    justify-self: center;
+    align-self: flex-start;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
 
-  footer {
-    width: 88%;
+  .footer {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
-    max-width: 1400px;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 60px;
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .logo {
+    width: 200px;
+  }
+  .mockup {
+    width: 696px;
+  }
+
+  .fa-brands {
+    transform: scale(2);
   }
 }
